# osquery

./: .gitmodules  BUILD.md  CMakeLists.txt  Makefile  Vagrantfile  azure-pipelines.yml  macos.diff
CMake/: CMakeLibs.cmake
cmake/: flags.cmake  globals.cmake  options.cmake  packaging.cmake  toolchain.cmake  utilities.cmake
docs/wiki/installation/: cli-flags.md  install-osx.md
include/osquery/: config.h  database.h  distributed.h  events.h  filesystem.h  packs.h  registry.h  system.h  tables.h
include/osquery/posix/: system.h
libraries/cmake/facebook/glibc/: CMakeLists.txt
libraries/cmake/source/aws-sdk-cpp/: CMakeLists.txt
libraries/cmake/source/boost/: CMakeLists.txt
libraries/cmake/source/gflags/: CMakeLists.txt
libraries/cmake/source/glog/: CMakeLists.txt
mode/linux-x86_64/: portable
osquery/: CMakeLists.txt
osquery/carver/: CMakeLists.txt
osquery/config/: CMakeLists.txt  config.cpp  packs.cpp
osquery/config/parsers/: events.cpp  file_paths.cpp  options.cpp
osquery/config/plugins/: filesystem.cpp  tls.cpp
osquery/config/tests/: config_tests.cpp  packs_tests.cpp
osquery/core/: CMakeLists.txt  init.cpp  json.h  process.h  process_shared.cpp  system.cpp  tables.cpp  test_util.cpp  test_util.h  testing.h  watcher.cpp  watcher.h
osquery/core/benchmarks/: json_benchmarks.cpp
osquery/core/posix/: process.cpp  process_ops.cpp
osquery/core/tests/: permissions_tests.cpp  process_tests.cpp  watcher_tests.cpp
osquery/core/windows/: process.cpp  process_ops.cpp
osquery/database/: CMakeLists.txt  database.cpp  db_handle.cpp
osquery/database/benchmarks/: database_benchmarks.cpp
osquery/database/tests/: results_tests.cpp
osquery/devtools/: CMakeLists.txt  shell.cpp
osquery/dispatcher/: CMakeLists.txt  distributed.cpp
osquery/distributed/: CMakeLists.txt  distributed.cpp
osquery/distributed/plugins/: tls.cpp
osquery/distributed/tests/: distributed_tests.cpp
osquery/ev2/: CMakeLists.txt
osquery/events/: CMakeLists.txt  events.cpp  eventsubscriberplugin.cpp  eventsubscriberplugin.h  kernel.cpp  kernel.h
osquery/events/kernel/: circular_queue_user.cpp  circular_queue_user.h
osquery/events/linux/: audit.cpp  audit.h  auditdnetlink.cpp  auditdnetlink.h  auditeventpublisher.cpp  auditeventpublisher.h  inotify.h  pcap.cpp  pcap.h  process_file_events.h
osquery/events/tests/: events_database_tests.cpp  events_tests.cpp
osquery/examples/: example_extension.cpp
osquery/extensions/: CMakeLists.txt  extensions.cpp
osquery/extensions/tests/: extensions_tests.cpp
osquery/filesystem/: CMakeLists.txt  filesystem.cpp
osquery/filesystem/darwin/: plist.mm
osquery/filesystem/tests/: filesystem_tests.cpp
osquery/filesystem/windows/: fileops.cpp
osquery/killswitch/: CMakeLists.txt
osquery/logger/: CMakeLists.txt  logger.cpp
osquery/logger/plugins/: aws_firehose.cpp  filesystem.cpp  stdout.cpp  tls.cpp  tls_logger.cpp  tls_logger.h
osquery/logger/tests/: logger_tests.cpp
osquery/main/: benchmarks.cpp  shell.cpp  tests.cpp
osquery/main/harnesses/: CMakeLists.txt  fuzz_utils.h
osquery/main/windows/: daemon.cpp
osquery/numeric_monitoring/: CMakeLists.txt
osquery/process/: CMakeLists.txt
osquery/registry/: CMakeLists.txt  registry.cpp
osquery/registry/tests/: registry_tests.cpp
osquery/remote/: CMakeLists.txt  http_client.cpp  http_client.h  remote.cpp  requests.h  utility.h
osquery/remote/enroll/: CMakeLists.txt
osquery/remote/serializers/: CMakeLists.txt  json.cpp  json.h
osquery/remote/transports/: CMakeLists.txt  tls.cpp  tls.h
osquery/sql/: CMakeLists.txt  sqlite_string.cpp  sqlite_util.cpp  virtual_table.cpp
osquery/sql/tests/: sql.cpp
osquery/system/network/: CMakeLists.txt
osquery/tables/: CMakeLists.txt
osquery/tables/applications/: CMakeLists.txt  browser_chrome.cpp  browser_firefox.cpp  browser_opera.cpp  browser_utils.cpp  browser_utils.h
osquery/tables/events/: BUCK  CMakeLists.txt  yara_events.cpp
osquery/tables/forensic/: sleuthkit.cpp
osquery/tables/networking/: CMakeLists.txt  curl.cpp  listening_ports.cpp
osquery/tables/other/: augeas.cpp  yara_utils.cpp  yara_utils.h
osquery/tables/smart/: CMakeLists.txt
osquery/tables/system/: CMakeLists.txt  cpuid.cpp  smbios_utils.h  uptime.cpp
osquery/tables/utility/: time.cpp
osquery/tables/yara/: CMakeLists.txt
osquery/tests/: test_util.cpp  test_util.h
osquery/utils/: CMakeLists.txt
osquery/utils/aws/: CMakeLists.txt
osquery/utils/conversions/: CMakeLists.txt
osquery/utils/debug/: CMakeLists.txt
osquery/utils/error/: CMakeLists.txt
osquery/utils/expected/: CMakeLists.txt
osquery/utils/json/: CMakeLists.txt
osquery/utils/status/: CMakeLists.txt
osquery/utils/system/: CMakeLists.txt
osquery/utils/versioning/: CMakeLists.txt
packs/: product-security.conf
plugins/config/parsers/: CMakeLists.txt
plugins/database/: CMakeLists.txt
plugins/killswitch/: CMakeLists.txt
plugins/logger/: CMakeLists.txt  buffered.cpp
plugins/numeric_monitoring/: CMakeLists.txt
specs/: BUCK  CMakeLists.txt  hash.table
specs/darwin/: extended_attributes.table  package_bom.table
specs/linux/: apt_sources.table
specs/posix/: augeas.table
specs/sleuthkit/: device_hash.table  device_partitions.table
third-party-formula/: CMakeLists.txt
tools/: build_prebuilt.sh  lib.sh  provision.sh  sync.sh
tools/analysis/: system_stress.py  tsan.supp
tools/codegen/: genapi.py  gentable.py  gentargets.py
tools/codegen/templates/: default.cpp.in
tools/deployment/: make_linux_package.sh
tools/provision/: amazon.sh  arch.sh  arm.sh  centos.sh  darwin.sh  debian.sh  fedora.sh  freebsd.sh  lib.sh  oracle.sh  rhel.sh  scientific.sh  ubuntu.sh
tools/provision/formula/: asio.rb  augeas.rb  aws-sdk-cpp.rb  beecrypt.rb  berkeley-db.rb  bison.rb  boost.rb  bzip2.rb  ccache.rb  cmake.rb  cpp-netlib.rb  cppcheck.rb  curl.rb  gcc.rb  gflags.rb  glibc-legacy.rb  glibc.rb  glog.rb  google-benchmark.rb  libaptpkg.rb  libarchive.rb  libaudit.rb  libcpp-arm.rb  libcpp.rb  libcryptsetup.rb  libdpkg.rb  (+37 more)
tools/tests/: test_inline_pack.conf
(+115 files in other folders)
